<resources>
    <string name="app_name">Quran Tracker</string>
    <string name="preference_file_key">com.example.quran_tracker_1.PREFERENCE_FILE_KEY</string>

    /* MainActivity */
    <string name="title_activity_main">@string/app_name</string>

    // ActionBar
    <string name="action_add">Add new record</string>
    <string name="action_settings">Settings</string>

    // TabLayout
    <string name="tabItem_recitation">Recitations</string>
    <string name="tabItem_chapter">Chapters</string>

    // Recitation Fragment
    <string name="recitation_button_delete_contentDescription">Delete the recitation</string>

    // Chapter Fragment
    <string name="recycler_mark_threadIsAlive">Marker is busy! Please wait…</string>
    <string name="recycler_delete_threadIsAlive">Deleter is busy! Please wait…</string>


    /* SettingsActivity */
    <string name="title_activity_settings">@string/action_settings</string>
    <string name="chipText_GoogleSignIn">Sign in</string>
    <string name="chipText_GoogleSignOut">Sign out</string>
    <string name="contentDescription_GoogleSignIn">Sign in with Google</string>
    <string name="contentDescription_GoogleSignOut">Sign out</string>
    <string name="chipText_sync">Sync</string>
    <string name="contentDescription_sync">Sync</string>

    /* AddActivity */
    <string name="title_activity_add">@string/action_add</string>
    <string name="editText_name">Name</string>
    <string name="editText_chapterNo">Chapter No</string>
    <string name="button_add">Add</string>

    <string name="toast_add_duplicateRecitation">Recitation with same name already exists!</string>
    <string name="toast_add_emptyName">Please enter a name.</string>
    <string name="toast_add_longName">Name is too long!</string>

    <string name="toast_add_duplicateChapter">Chapter with same name and number already exists!</string>
    <string name="toast_add_emptyChapterNo">Please enter a Chapter No.</string>
    <string name="toast_add_invalidChapterNo">Invalid Chapter No!</string>
    <string name="toast_add_outOfLimitChapterNo">Chapter No should be between 1–30!</string>


</resources>